# remmeh

./: .README.md.swp  .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-core-chat/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-UI-SPEC.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
remmeh/: __init__.py  config.py  main.py  models.py
remmeh/api/: __init__.py  openrouter.py
remmeh/storage/: __init__.py  db.py  sessions.py
remmeh/ui/: __init__.py  app.py  remmeh.tcss
remmeh/ui/screens/: __init__.py  chat.py  model_input.py
remmeh/ui/widgets/: __init__.py  chat_view.py  input_panel.py  message_widget.py  status_bar.py
tests/: conftest.py  test_chat_flow.py  test_models.py  test_openrouter.py  test_storage.py
tests/ui/: __init__.py  test_app.py
